--- a/src/index.css
+++ b/src/index.css
@@ -395,3 +395,9 @@ label{
 .pagenatio {
   margin: 30px 20px;
 }
+/* *ANCHOR - Edit Dialog */
+.editDialog{
+  max-width: 500px;
+  padding-inline: 0;
+  min-height: fit-content;
+}
