--- a/src/index.css
+++ b/src/index.css
@@ -421,7 +421,11 @@ list-style: none;
 .numOfUsers , 
 .productsQuantity{
   border: 5px solid var(--dark-blue);
-  width: fit-content;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center ;
 }
 /* *ANCHOR - Auth */
 .selectAuth{
