intialize sub-subCategories / handle sub & sub-sub dropdpowns options at add new product / change scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,25 @@ body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #aaa8a8;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #5f5f5fa3;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
